# itau-desafio

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_completions_table.py
src/: container.py  main.py
src/application/dtos/: completion_dto.py
src/application/ports/: completion_repository.py  llm_provider.py
src/application/use_cases/: create_completion.py
src/config/: settings.py
src/domain/entities/: completion.py
src/domain/value_objects/: completion_status.py
src/infrastructure/database/: connection.py
src/infrastructure/database/models/: completion_model.py
src/infrastructure/database/repositories/: pg_completion_repository.py
src/infrastructure/llm/: litellm_provider.py
src/interfaces/http/: router.py
src/interfaces/http/schemas/: completion_schema.py
src/interfaces/http/v1/: completions.py
tests/http/: conftest.py  test_completions.py
tests/integration/: conftest.py  test_pg_completion_repository.py
tests/unit/domain/: test_completion.py
tests/unit/use_cases/: test_create_completion.py
